--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Fangqiang
 middle_name: 
 last_name: Ding
-email: s2207427@ed.ac.uk
+email: fding@mit.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   PhD Candidate at U of Edinburgh
 footer_text: >
