--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Ding
 email: fding@mit.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  PhD Candidate at U of Edinburgh
+  Postdoc @ MIT
 footer_text: >
   
 
